--- a/catalog/templates/catalog/product_info.html
+++ b/catalog/templates/catalog/product_info.html
@@ -16,7 +16,7 @@
             <ul class="list-unstyled mt-3 mb-4">
                 <img src="{{ object.image|media_image }}" class="card-img-top">
                 <li>категория: {{ object.category }}</li>
-                <li>описание: {{ object.products_description|truncatechars:100 }}</li>
+                <li>описание: {{ object.products_description }}</li>
             </ul>
         </div>
     </div>
