--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -179,6 +179,8 @@
                     <ul class="list-unstyled">
                         <li><a href="{% url 'catalog:home' %}" class="text-white">Главная</a></li>
                         <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
+                        <li><a href="{% url 'catalog:blog_list' %}" class="text-white">Блог</a></li>
+
                     </ul>
                 </div>
             </div>
