--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -13,11 +13,11 @@
             <h4 class="my-0 fw-normal">{{ object.products_name }}</h4>
         </div>
         <div class="card-body">
-            <ul class="list-unstyled mt-3 mb-4">
+            <p class="list-unstyled mt-3 mb-4">
                 <img src="{{ object.image|media_image }}" class="card-img-top">
                 <li>категория: {{ object.category }}</li>
                 <li>описание: {{ object.products_description }}</li>
-            </ul>
+            </p>
         </div>
     </div>
 </div>
