--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -177,9 +177,9 @@
                 <div class="col-sm-4 offset-md-1 py-4">
                     <h4>Меню</h4>
                     <ul class="list-unstyled">
-                        <li><a href="{% url 'catalog:home' %}" class="text-white">Главная</a></li>
+                        <li><a href="{% url 'catalog:product_list' %}" class="text-white">Главная</a></li>
                         <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
-                        <li><a href="{% url 'catalog:blog_list' %}" class="text-white">Блог</a></li>
+                        <li><a href="{% url 'blog:blog_list' %}" class="text-white">Блог</a></li>
 
                     </ul>
                 </div>
