--- a/catalog/templates/catalog/product_confirm_delete.html
+++ b/catalog/templates/catalog/product_confirm_delete.html
@@ -1,16 +1,15 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-
 <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
-                    <p>Хотите удалить материал "{{ object.title }}"?</p>
+                    <p>Хотите удалить продукт "{{ object.products_name }}"?</p>
                     <button type="submit" class="btn btn-danger">Подтвердить</button>
-                    <a href="{% url 'blog:blog_list' %}" class="btn btn-warning">Отмена</a>
+                    <a href="{% url 'catalog:product_list' %}" class="btn btn-warning">Отмена</a>
                 </form>
             </div>
         </div>
