--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,6 +1,9 @@
 {% extends 'catalog/base.html' %}
 {% block content %}
+<div class="col-12">
+    <a class="btn btn-outline-primary" href="{% url 'catalog:product_create' %}">Добавить продукт</a>
+</div>
 {% for object in object_list %}
-    {% include 'catalog/includes/product_card.html' %}
+{% include 'catalog/includes/product_card.html' %}
 {% endfor %}
 {% endblock %}
